# django-style-guide

./: .gitignore  README.md  cookiecutter.json  init.sh
{{cookiecutter.project_name}}/: .env.example  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AGENTS.md  LICENSE  LOGGING.md  Makefile  README.md  VALIDATION.md  docker-compose.dev.yml  docker-compose.yml  manage.py  mypy.ini  pyproject.toml  pytest.ini  setup.cfg  start-dev-services.sh
{{cookiecutter.project_name}}/.github/workflows/: ci.yml
{{cookiecutter.project_name}}/config/: asgi.py  celery.py  env.py  logging_formatters.py  request_id.py  tasks.py  urls.py  wsgi.py
{{cookiecutter.project_name}}/config/django/: base.py  local.py  production.py  test.py
{{cookiecutter.project_name}}/config/settings/: apps.py  auth.py  cache.py  celery.py  channels.py  core.py  cors.py  database.py  drf.py  email.py  extra.py  i18n.py  jwt.py  logging.py  middleware.py  security.py  sentry.py  sessions.py  static_media.py  swagger.py
{{cookiecutter.project_name}}/config/tests/: test_request_id.py
{{cookiecutter.project_name}}/docker/: beats_entrypoint.sh  dev_entrypoint.sh  local.Dockerfile  production.Dockerfile  web_entrypoint.sh
{{cookiecutter.project_name}}/docker/nginx/: nginx.conf
{{cookiecutter.project_name}}/docker/traefik/: traefik.yml
{{cookiecutter.project_name}}/docs/: README.md
{{cookiecutter.project_name}}/docs/style-guide/: README.md  (+29 more)
{{cookiecutter.project_name}}/requirements/: base.txt  local.txt  production.txt
{{cookiecutter.project_name}}/scripts/: update_translations.sh
(+153 files in other folders)
