[project]
name = "{{cookiecutter.project_slug}}"
requires-python = ">=3.12,<3.13"

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [
    "docs",
    "**/migrations/**",
    "locale",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "F403",
]

[tool.ruff.lint.isort]
known-first-party = ["{{cookiecutter.project_slug}}"]

[tool.pydoclint]
style = "google"
